--- a/a_01/css/style.css
+++ b/a_01/css/style.css
@@ -1,16 +1,19 @@
 p {
-    text-align:center
+    text-align:center;
     font-size: 15px;
-   border: 10px solid black;
-    outline-color: green;
      width: 200px;
-    padding: 10px;
-    border: 5px green;
     margin-bottom: 100px;
     margin-right: 200px;
-    margin-left: 560px;
+    margin-left: 820px;
     font-family:'Josefin Sans', sans-serif;
     padding: 2em 3em 0 3em; 
+
+}
+
+a {
+
+text-align:center;
+    font-size: 15px;
 
 }
 
@@ -19,13 +22,12 @@ p {
     margin: 5;
     padding: 10;
 }
+
 body {
     background-color: white;
   
 } 
-a:hover { 
-    background-color: yellow;
-}
+
 
 
 h1,h2,h3,h4,h5,h6
@@ -102,15 +104,15 @@ font-family:'Josefin Sans', sans-serif;
 font-weight: bold;
 
 }
-
+ 
 img {
     opacity: 0.5;
-    filter: alpha(opacity=70); /* For IE8 and earlier */
+    img-align: center;
 }
 
 img:hover {
     opacity: 1.0;
-    filter: alpha(opacity=100); 
+  
 }
 
 ul {
@@ -122,6 +124,16 @@ ul {
 ;
 }
 
+img.displayed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto 
+}
+
+#myHeader {
+
+
+}
 
 
 
